--- a/package.json
+++ b/package.json
@@ -25,38 +25,38 @@
   },
   "homepage": "https://github.com/vacuumlabs/webpack-config-vacuumlabs#readme",
   "dependencies": {
-    "compression": "^1.6.2",
-    "express": "^4.15.2",
-    "gulp-util": "^3.0.8",
-    "lodash": "^4.17.4",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.18.0"
+    "compression": "1",
+    "express": "4",
+    "gulp-util": "3",
+    "lodash": "4",
+    "webpack-dev-middleware": "1",
+    "webpack-hot-middleware": "2"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-node6": "^11.0.0",
-    "babel-preset-stage-0": "^6.24.1"
+    "babel-cli": "6",
+    "babel-preset-node6": "11",
+    "babel-preset-stage-0": "6"
   },
   "peerDependencies": {
-    "autoprefixer": ">=6.7.7",
-    "babel-loader": ">=6.4.1",
-    "babel-plugin-react-transform": ">=2.0.2",
-    "babel-plugin-transform-decorators-legacy": ">=1.3.4",
-    "babel-plugin-transform-react-constant-elements": ">=6.23.0",
-    "babel-preset-env": ">=1.4.0",
-    "css-loader": ">=0.28.0",
-    "eslint-loader": ">=1.7.1",
-    "extract-text-webpack-plugin": ">=2.1.0",
-    "file-loader": ">=0.11.1",
-    "postcss-loader": ">=1.3.3",
-    "react-transform-catch-errors": ">=1.0.2",
-    "react-transform-hmr": ">=1.0.4",
-    "redbox-react": ">=1.3.6",
-    "sass-loader": ">=6.0.3",
-    "style-loader": ">=0.16.1",
-    "url-loader": ">=0.5.8",
-    "webpack": ">=2.4.1",
-    "webpack-isomorphic-tools": ">=3.0.2",
-    "whatwg-fetch": ">=2.0.3"
+    "autoprefixer": "6",
+    "babel-loader": "6",
+    "babel-plugin-react-transform": "2",
+    "babel-plugin-transform-decorators-legacy": "1",
+    "babel-plugin-transform-react-constant-elements": "6",
+    "babel-preset-env": "1",
+    "css-loader": "0.28",
+    "eslint-loader": "1",
+    "extract-text-webpack-plugin": "2",
+    "file-loader": "0.11",
+    "postcss-loader": "1",
+    "react-transform-catch-errors": "1",
+    "react-transform-hmr": "1",
+    "redbox-react": "1",
+    "sass-loader": "6",
+    "style-loader": "0.16",
+    "url-loader": "0.5",
+    "webpack": "2",
+    "webpack-isomorphic-tools": "3",
+    "whatwg-fetch": "2"
   }
 }
