--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-plugin-transform-decorators-legacy": "1",
     "babel-plugin-transform-react-constant-elements": "6",
     "babel-preset-env": "1",
+    "babel-preset-stage-0": "6",
     "css-loader": "0.28",
     "eslint-loader": "1",
     "extract-text-webpack-plugin": "2",
