--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpack-config-vacuumlabs",
-  "version": "1.1.3",
-  "description": "Default Webpack2 config we use in vacuumlabs.",
+  "version": "1.1.4",
+  "description": "Default Webpack 2 & 3 config we use in vacuumlabs.",
   "main": "dist/index.js",
   "scripts": {
     "build": "babel -d dist/ src/",
