--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
   "peerDependencies": {
     "autoprefixer": "6",
     "babel-loader": "6",
-    "babel-plugin-react-transform": "2",
     "babel-plugin-transform-decorators-legacy": "1",
     "babel-plugin-transform-react-constant-elements": "6",
     "babel-preset-env": "1",
@@ -50,12 +49,13 @@
     "extract-text-webpack-plugin": "2",
     "file-loader": "0.11",
     "postcss-loader": "1",
-    "react-transform-catch-errors": "1",
+    "react-hot-loader": "3",
     "redbox-react": "1",
     "sass-loader": "6",
     "style-loader": "0.16",
     "url-loader": "0.5",
     "webpack": "2",
+    "webpack-dev-server": "2",
     "webpack-isomorphic-tools": "3",
     "whatwg-fetch": "2"
   }
