--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-config-vacuumlabs",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "Default Webpack 2 & 3 config we use in vacuumlabs.",
   "main": "dist/index.js",
   "scripts": {
@@ -26,12 +26,30 @@
   },
   "homepage": "https://github.com/vacuumlabs/webpack-config-vacuumlabs#readme",
   "dependencies": {
+    "autoprefixer": "7",
+    "babel-loader": "7",
+    "babel-plugin-transform-decorators-legacy": "1",
+    "babel-plugin-transform-react-constant-elements": "6",
+    "babel-preset-env": "1",
     "compression": "1",
+    "css-loader": "0.28",
+    "eslint-loader": "1",
     "express": "4",
+    "extract-text-webpack-plugin": "3",
+    "file-loader": "0.11",
     "gulp-util": "3",
     "lodash": "4",
+    "node-sass": "^4.5.3",
+    "postcss-loader": "2",
+    "react-hot-loader": "next",
+    "sass-loader": "6",
+    "style-loader": "0.18",
+    "url-loader": "0.5",
+    "webpack": "3",
     "webpack-dev-middleware": "1",
-    "webpack-hot-middleware": "2"
+    "webpack-dev-server": "2",
+    "webpack-isomorphic-tools": "3",
+    "whatwg-fetch": "2"
   },
   "devDependencies": {
     "babel-cli": "6",
@@ -40,29 +58,12 @@
     "babel-preset-stage-0": "6",
     "eslint": "4",
     "eslint-config-vacuumlabs": "1",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "2",
     "eslint-plugin-react": "7"
   },
-  "peerDependencies": {
-    "autoprefixer": "6",
-    "babel-loader": "6",
-    "babel-plugin-transform-decorators-legacy": "1",
-    "babel-plugin-transform-react-constant-elements": "6",
-    "babel-preset-env": "1",
-    "babel-preset-stage-0": "6",
-    "css-loader": "0.28",
-    "eslint-loader": "1",
-    "extract-text-webpack-plugin": "2",
-    "file-loader": "0.11",
-    "postcss-loader": "1",
-    "react-hot-loader": "3",
-    "redbox-react": "1",
-    "sass-loader": "6",
-    "style-loader": "0.16",
-    "url-loader": "0.5",
-    "webpack": "2",
-    "webpack-dev-server": "2",
-    "webpack-isomorphic-tools": "3",
-    "whatwg-fetch": "2"
+  "peerDepencencies": {
+    "react": "15 || 16",
+    "react-dom": "15 || 16",
+    "babel-core": "6 || 7"
   }
 }
