--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "webpack-config-vacuumlabs",
-  "version": "1.1.8",
+  "version": "1.1.10",
   "description": "Default Webpack 2 & 3 config we use in vacuumlabs.",
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel -d dist/ src/",
+    "build": "babel -d dist/ src/ && node ./extractPeerDeps.js",
     "build-watch": "babel -d dist/ src/ --watch",
     "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,24 +26,31 @@
   },
   "homepage": "https://github.com/vacuumlabs/webpack-config-vacuumlabs#readme",
   "dependencies": {
+    "express": "4",
+    "gulp-util": "3",
+    "lodash": "4"
+  },
+  "devDependencies": {
+    "babel-cli": "6",
+    "babel-eslint": "8",
+    "babel-preset-node6": "11",
+    "eslint": "4",
+    "eslint-config-vacuumlabs": "1",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-react": "7"
+  },
+  "peerDependencies": {
     "autoprefixer": "7",
     "babel-loader": "7",
     "babel-plugin-transform-decorators-legacy": "1",
     "babel-plugin-transform-react-constant-elements": "6",
     "babel-preset-env": "1",
-    "compression": "1",
+    "babel-preset-stage-0": "6",
     "css-loader": "0.28",
     "eslint-loader": "1",
-    "express": "4",
     "extract-text-webpack-plugin": "3",
     "file-loader": "0.11",
-    "gulp-util": "3",
-    "lodash": "4",
-    "node-sass": "^4.5.3",
-    "postcss-loader": "2",
-    "react-transform": "^0.0.3",
-    "react-transform-catch-errors": "^1.0.2",
-    "redbox-react": "^1.5.0",
+    "redbox-react": "1",
     "sass-loader": "6",
     "style-loader": "0.18",
     "url-loader": "0.5",
@@ -51,19 +58,11 @@
     "webpack-dev-middleware": "1",
     "webpack-dev-server": "2",
     "webpack-isomorphic-tools": "3",
-    "whatwg-fetch": "2"
-  },
-  "devDependencies": {
-    "babel-cli": "6",
-    "babel-eslint": "8",
-    "babel-preset-node6": "11",
-    "babel-preset-stage-0": "6",
-    "eslint": "4",
-    "eslint-config-vacuumlabs": "1",
-    "eslint-plugin-import": "2",
-    "eslint-plugin-react": "7"
-  },
-  "peerDepencencies": {
+    "whatwg-fetch": "2",
+    "node-sass": "4",
+    "postcss-loader": "2",
+    "react-transform": "^0.0.3",
+    "react-transform-catch-errors": "1",
     "react": "15 || 16",
     "react-dom": "15 || 16",
     "babel-core": "6 || 7"
