Add missing dependencies
babel-preset-stage-0 is needed for development
babel-preset-react is needed as peer

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-cli": "6",
     "babel-eslint": "8",
     "babel-preset-node6": "11",
+    "babel-preset-stage-0": "6",
     "eslint": "4",
     "eslint-config-vacuumlabs": "1",
     "eslint-plugin-import": "2",
@@ -41,15 +42,21 @@
   },
   "peerDependencies": {
     "autoprefixer": "7",
+    "babel-core": "6 || 7",
     "babel-loader": "7",
     "babel-plugin-transform-decorators-legacy": "1",
     "babel-plugin-transform-react-constant-elements": "6",
     "babel-preset-env": "1",
+    "babel-preset-react": "6",
     "babel-preset-stage-0": "6",
     "css-loader": "0.28",
     "eslint-loader": "1",
     "extract-text-webpack-plugin": "3",
     "file-loader": "0.11",
+    "node-sass": "4",
+    "postcss-loader": "2",
+    "react": "^16.0.0-rc.3",
+    "react-dom": "^16.0.0-rc.3",
     "sass-loader": "6",
     "style-loader": "0.18",
     "url-loader": "0.5",
@@ -57,11 +64,6 @@
     "webpack-dev-middleware": "1",
     "webpack-dev-server": "2",
     "webpack-isomorphic-tools": "3",
-    "whatwg-fetch": "2",
-    "node-sass": "4",
-    "postcss-loader": "2",
-    "react": "^16.0.0-rc.3",
-    "react-dom": "^16.0.0-rc.3",
-    "babel-core": "6 || 7"
+    "whatwg-fetch": "2"
   }
 }
