--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "homepage": "https://github.com/vacuumlabs/webpack-config-vacuumlabs#readme",
   "dependencies": {
     "express": "4",
-    "gulp-util": "3",
+    "plugin-error": "1.0.1",
+    "fancy-log": "1.3.2",
     "lodash": "4"
   },
   "devDependencies": {
@@ -39,32 +40,56 @@
     "eslint": "4",
     "eslint-config-vacuumlabs": "1",
     "eslint-plugin-import": "2",
-    "eslint-plugin-react": "7"
-  },
-  "peerDependencies": {
-    "autoprefixer": "7",
+    "eslint-plugin-react": "7",
+    "autoprefixer": "8.5.0",
     "babel-core": "6 || 7",
     "babel-loader": "7",
     "babel-plugin-transform-decorators-legacy": "1",
     "babel-plugin-transform-react-constant-elements": "6",
-    "babel-preset-env": "1",
+    "babel-preset-env": "1.7",
     "babel-preset-react": "6",
-    "babel-preset-stage-0": "6",
-    "css-loader": "0.28",
-    "eslint-loader": "1",
-    "extract-text-webpack-plugin": "3",
-    "file-loader": "0.11",
-    "node-sass": "4",
-    "postcss-loader": "2",
-    "react": "^16.0.0-rc.3",
-    "react-dom": "^16.0.0-rc.3",
-    "sass-loader": "6",
-    "style-loader": "0.18",
-    "url-loader": "0.5",
-    "webpack": "3",
-    "webpack-dev-middleware": "1",
-    "webpack-dev-server": "2",
-    "webpack-isomorphic-tools": "3",
+    "css-loader": "0.28.11",
+    "eslint-loader": "2",
+    "mini-css-extract-plugin": "0.4.0",
+    "optimize-css-assets-webpack-plugin": "4.0.1",
+    "file-loader": "1.1.11",
+    "node-sass": "4.9",
+    "postcss-loader": "2.1.5",
+    "react": "^16.3.0-rc.3",
+    "react-dom": "^16.3.0-rc.3",
+    "sass-loader": "7.0.1",
+    "style-loader": "0.21",
+    "uglifyjs-webpack-plugin": "1.2.5",
+    "url-loader": "1.0.1",
+    "webpack": "4.8.3",
+    "webpack-dev-middleware": "3.1.3",
+    "webpack-dev-server": "3.1.4",
+    "whatwg-fetch": "2"
+  },
+  "peerDependencies": {
+    "autoprefixer": "8.5.0",
+    "babel-core": "6 || 7",
+    "babel-loader": "7",
+    "babel-plugin-transform-decorators-legacy": "1",
+    "babel-plugin-transform-react-constant-elements": "6",
+    "babel-preset-env": "1.7",
+    "babel-preset-react": "6",
+    "css-loader": "0.28.11",
+    "eslint-loader": "2",
+    "mini-css-extract-plugin": "0.4.0",
+    "optimize-css-assets-webpack-plugin": "4.0.1",
+    "file-loader": "1.1.11",
+    "node-sass": "4.9",
+    "postcss-loader": "2.1.5",
+    "react": "^16.3.0-rc.3",
+    "react-dom": "^16.3.0-rc.3",
+    "sass-loader": "7.0.1",
+    "style-loader": "0.21",
+    "uglifyjs-webpack-plugin": "1.2.5",
+    "url-loader": "1.0.1",
+    "webpack": "4.8.3",
+    "webpack-dev-middleware": "3.1.3",
+    "webpack-dev-server": "3.1.4",
     "whatwg-fetch": "2"
   }
 }
