--- a/package.json
+++ b/package.json
@@ -50,9 +50,10 @@
     "babel-preset-react": "6",
     "css-loader": "0.28.11",
     "eslint-loader": "2",
+    "file-loader": "1.1.11",
+    "http-proxy-middleware": "0.18.0",
     "mini-css-extract-plugin": "0.4.0",
     "optimize-css-assets-webpack-plugin": "4.0.1",
-    "file-loader": "1.1.11",
     "node-sass": "4.9",
     "postcss-loader": "2.1.5",
     "react": "^16.3.0-rc.3",
@@ -62,8 +63,8 @@
     "uglifyjs-webpack-plugin": "1.2.5",
     "url-loader": "1.0.1",
     "webpack": "4.8.3",
+    "webpack-hot-middleware": "2.22.2",
     "webpack-dev-middleware": "3.1.3",
-    "webpack-dev-server": "3.1.4",
     "whatwg-fetch": "2"
   },
   "peerDependencies": {
@@ -76,9 +77,10 @@
     "babel-preset-react": "6",
     "css-loader": "0.28.11",
     "eslint-loader": "2",
+    "file-loader": "1.1.11",
+    "http-proxy-middleware": "0.18.0",
     "mini-css-extract-plugin": "0.4.0",
     "optimize-css-assets-webpack-plugin": "4.0.1",
-    "file-loader": "1.1.11",
     "node-sass": "4.9",
     "postcss-loader": "2.1.5",
     "react": "^16.3.0-rc.3",
@@ -88,8 +90,8 @@
     "uglifyjs-webpack-plugin": "1.2.5",
     "url-loader": "1.0.1",
     "webpack": "4.8.3",
+    "webpack-hot-middleware": "2.22.2",
     "webpack-dev-middleware": "3.1.3",
-    "webpack-dev-server": "3.1.4",
     "whatwg-fetch": "2"
   }
 }
