--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "optimize-css-assets-webpack-plugin": "4.0.1",
     "node-sass": "4.9",
     "postcss-loader": "2.1.5",
+    "progress-bar-webpack-plugin": "1.10.0",
     "react": "^16.3.0-rc.3",
     "react-dom": "^16.3.0-rc.3",
     "sass-loader": "7.0.1",
@@ -83,6 +84,7 @@
     "optimize-css-assets-webpack-plugin": "4.0.1",
     "node-sass": "4.9",
     "postcss-loader": "2.1.5",
+    "progress-bar-webpack-plugin": "1.10.0",
     "react": "^16.3.0-rc.3",
     "react-dom": "^16.3.0-rc.3",
     "sass-loader": "7.0.1",
