--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "eslint": "4",
     "eslint-config-vacuumlabs": "1",
     "eslint-plugin-import": "2",
-    "eslint-plugin-react": "7",
+    "eslint-plugin-react": "7"
   },
   "peerDependencies": {
     "autoprefixer": "^8.5.0",
