--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Default Webpack 2 & 3 config we use in vacuumlabs.",
   "main": "dist/index.js",
   "scripts": {
+    "install-peer": "node ./getPeerScript.js | sh",
     "build": "babel -d dist/ src/ && node ./extractPeerDeps.js",
     "build-watch": "babel -d dist/ src/ --watch",
     "prepublish": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "eslint . --max-warnings 0",
     "eslint": "eslint ."
   },
   "repository": {
