--- a/package.json
+++ b/package.json
@@ -28,28 +28,26 @@
   "homepage": "https://github.com/vacuumlabs/webpack-config-vacuumlabs#readme",
   "dependencies": {
     "express": "4",
-    "plugin-error": "1.0.1",
     "fancy-log": "1.3.2",
-    "lodash": "4"
+    "lodash": "4",
+    "plugin-error": "1.0.1"
   },
   "devDependencies": {
-    "babel-cli": "6",
+    "@babel/cli": "^7.0.0",
     "babel-eslint": "8",
-    "babel-preset-node6": "11",
-    "babel-preset-stage-0": "6",
     "eslint": "4",
     "eslint-config-vacuumlabs": "1",
     "eslint-plugin-import": "2",
     "eslint-plugin-react": "7"
   },
   "peerDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^8.5.0",
-    "babel-core": "^6.26",
-    "babel-loader": "^7.1.0",
-    "babel-plugin-transform-decorators-legacy": "^1",
-    "babel-plugin-transform-react-constant-elements": "^6",
-    "babel-preset-env": "^1.7",
-    "babel-preset-react": "^6",
+    "babel-loader": "^8.0.4",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "eslint-loader": "^2",
@@ -67,8 +65,8 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^1.0.1",
     "webpack": "^4.8.3",
-    "webpack-hot-middleware": "^2.22.2",
     "webpack-dev-middleware": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.2",
     "whatwg-fetch": "^2"
   }
 }
