--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-config-vacuumlabs",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "description": "Default Webpack 2 & 3 config we use in vacuumlabs.",
   "main": "dist/index.js",
   "scripts": {
@@ -27,9 +27,9 @@
   },
   "homepage": "https://github.com/vacuumlabs/webpack-config-vacuumlabs#readme",
   "dependencies": {
-    "express": "4.5.0",
-    "gulp-util": "3",
-    "lodash": "4.17.11"
+    "fancy-log": "1.3.3",
+    "lodash": "4.17.11",
+    "plugin-error": "1.0.1"
   },
   "devDependencies": {
     "babel-cli": "6",
