--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/vacuumlabs/webpack-config-vacuumlabs#readme",
   "dependencies": {
     "fancy-log": "1.3.3",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.15",
     "plugin-error": "1.0.1"
   },
   "devDependencies": {
