--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-config-vacuumlabs",
-  "version": "2.2.4",
+  "version": "2.2.5",
   "description": "Default Webpack 2 & 3 config we use in vacuumlabs.",
   "main": "dist/index.js",
   "scripts": {
@@ -35,22 +35,7 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.0.0",
-    "@babel/plugin-proposal-do-expressions": "^7.0.0",
-    "@babel/plugin-proposal-export-default-from": "^7.0.0",
-    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
-    "@babel/plugin-proposal-function-bind": "^7.0.0",
-    "@babel/plugin-proposal-function-sent": "^7.0.0",
-    "@babel/plugin-proposal-json-strings": "^7.0.0",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
-    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.0.0",
-    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/preset-env": "^7.5.5",
     "babel-eslint": "^9.0.0",
     "eslint": "4",
     "eslint-config-vacuumlabs": "1",
@@ -58,29 +43,6 @@
     "eslint-plugin-react": "7"
   },
   "peerDependencies": {
-    "autoprefixer": "7",
-    "babel-core": "6 || 7",
-    "babel-loader": "7",
-    "babel-plugin-transform-decorators-legacy": "1",
-    "babel-plugin-transform-react-constant-elements": "6",
-    "babel-preset-env": "1",
-    "babel-preset-react": "6",
-    "babel-preset-stage-0": "6",
-    "css-loader": "0.28",
-    "eslint-loader": "1",
-    "extract-text-webpack-plugin": "3",
-    "file-loader": "0.11",
-    "node-sass": "4",
-    "postcss-loader": "2",
-    "react": "^16.0.0-rc.3",
-    "react-dom": "^16.0.0-rc.3",
-    "sass-loader": "6",
-    "style-loader": "0.18",
-    "url-loader": "0.5",
-    "webpack": "3",
-    "webpack-dev-middleware": "1",
-    "webpack-dev-server": "2",
-    "webpack-isomorphic-tools": "3",
-    "whatwg-fetch": "2"
+    "@babel/preset-env": "^7.5.5"
   }
 }
